# ECE_Advisor_Bot

./: README.md  app.py  pyproject.toml
data/: ece_curriculum_nitk.txt
tools/: curriculum_tool.py
utils/: openai_client.py
